Project

General

Profile

Actions

Bug #54417

closed

radosgw-admin bucket sync run command crashes when send_chain() gets invoked

Added by Pritha Srivastava about 2 years ago. Updated over 1 year ago.

Status:
Resolved
Priority:
High
Target version:
-
% Done:

100%

Source:
other
Tags:
gc
Backport:
octopus pacific quincy
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

radosgw-admin bucket sync run command crashes when send_chain() gets invoked as part of the command.


Related issues 3 (0 open3 closed)

Copied to rgw - Backport #54426: pacific: radosgw-admin bucket sync run command crashes when send_chain() gets invokedResolvedCory SnyderActions
Copied to rgw - Backport #54427: octopus: radosgw-admin bucket sync run command crashes when send_chain() gets invokedRejectedActions
Copied to rgw - Backport #54428: quincy: radosgw-admin bucket sync run command crashes when send_chain() gets invokedResolvedCory SnyderActions
Actions #1

Updated by Casey Bodley about 2 years ago

  • Status changed from New to Pending Backport
  • Tags set to gc
  • Backport set to octopus pacific quincy
Actions #2

Updated by Backport Bot about 2 years ago

  • Copied to Backport #54426: pacific: radosgw-admin bucket sync run command crashes when send_chain() gets invoked added
Actions #3

Updated by Backport Bot about 2 years ago

  • Copied to Backport #54427: octopus: radosgw-admin bucket sync run command crashes when send_chain() gets invoked added
Actions #4

Updated by Backport Bot about 2 years ago

  • Copied to Backport #54428: quincy: radosgw-admin bucket sync run command crashes when send_chain() gets invoked added
Actions #5

Updated by Backport Bot over 1 year ago

  • Tags changed from gc to gc backport_processed
Actions #6

Updated by Konstantin Shalygin over 1 year ago

  • Status changed from Pending Backport to Resolved
  • % Done changed from 0 to 100
  • Tags changed from gc backport_processed to gc
Actions

Also available in: Atom PDF